--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args":["/Volumes/GoogleDrive/.shortcut-targets-by-id/1-AREc0ZM7eaj3rjcvwPWX52RAa8wTRUb/Masters-UCI/Winter-2022/Adv Sys SW (EECS 211)/Assignment1/test3", "1"]
+            "args":["/Volumes/GoogleDrive/.shortcut-targets-by-id/1-AREc0ZM7eaj3rjcvwPWX52RAa8wTRUb/Masters-UCI/Winter-2022/Adv Sys SW (EECS 211)/Assignment1/problem3" , "1"]
         }
     ]
 }
